# docs/openapi.yaml
@@ -1,11 +1,480 @@
-GET workshop
-POST workshop
-PATCH workshop/{id} (schedule and agenda fields, so long as status is Pending)
-PATCH workshop/{id}/start (Status Pending to Active, Current Exercise = 0)
-POST workshop/{id}/message (add message to current exercise, get reply, process bot instructions if provided)
-POST workshop/{id}/observation (add observation to observations)
-PATCH workshop/{id}/observations (update list of observations after de-dup, etc.)
-PATCH workshop/{id}/next (advance current exercise, if last Status to Completed)
+openapi: 3.0.3
+info:
+  title: Fran the Facilitator API
+  description: This is the API/ChatAgent that supports Creating, conducting, and recording Design Thinking Workshops
+  version: 1.0.0
+  contact:
+    email: devs@agile-learning.institute
+  license:
+    name: Apache 2.0
+    url: http://www.apache.org/licenses/LICENSE-2.0.html
+paths:
+  /api/chains/:
+    get:
+      summary: Get a list of Exercise Chains (workshop templates)
+      operationId: get_chains
+      responses:
+        '200':
+          description: Successful response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Chains'
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              example:
+                error: "Internal server error. Please try again later."
+  /api/chain/{name}:
+    get:
+      summary: Get a exercise chain by Name
+      description: Get the chain
+      operationId: get_chain
+      parameters:
+        - name: name
+          in: path
+          description: Name of the chain
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Chain'
+        '500':
+          description: A Processing Error occurred
+  /api/exercises/:
+    get:
+      summary: Get a list of Design Thinking Exercises you can use in a workshop
+      operationId: get_exercises
+      responses:
+        '200':
+          description: Successful response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Exercises'
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              example:
+                error: "Internal server error. Please try again later."
+  /api/exercise/{name}:
+    get:
+      summary: Get a exercise by Name
+      description: Get the Exercise
+      operationId: get_exercise
+      parameters:
+        - name: name
+          in: path
+          description: Name of the exercise
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Exercise'
+        '500':
+          description: A Processing Error occurred
+  /api/workshops/:
+    get:
+      summary: Get a list of Workshops that match the query
+      operationId: get_workshops
+      parameters:
+        - name: query
+          in: query
+          description: "Exercise name query string"
+          required: false
+          schema:
+            type: object
+      responses:
+        '200':
+          description: Successful response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Workshops'
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              example:
+                error: "Internal server error. Please try again later."
+  /api/workshop/:
+    post:
+      summary: Create a new Workshop
+      operationId: new_workshop
+      requestBody:
+        description: Workshop to Add
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/New_Workshop'
+      responses:
+        '200':
+          description: Successful response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Workshop'
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              example:
+                error: "Internal server error. Please try again later."
+  /api/workshop/{id}:
+    get:
+      summary: Get a Workshop by ID
+      description: Get the Workshop
+      operationId: get_workshop
+      parameters:
+        - name: name
+          in: path
+          description: Name of the exercise
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Workshop'
+        '500':
+          description: A Processing Error occurred
+    patch:
+      summary: Update a Workshop 
+      description: Update the Workshop
+      operationId: update_workshop
+      parameters:
+        - name: id
+          in: path
+          description: ID of the workshop to update
+          required: true
+          schema:
+            type: string
+      requestBody:
+        description: Workshop
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Workshop'
+        required: true
+      responses:
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Workshop'
+        '500':
+          description: A Processing Error occurred
+ 
+  /api/workshop/{id}/start:
+    post:
+      summary: Start a workshop
+      description: Start the workshop, change status from Pending to Active, set current_exercise to 0
+      operationId: start_workshop
+      responses:
+        '200':
+          description: Successful operation
+        '500':
+          description: A Processing Error occurred
+  /api/workshop/{id}/next:
+    post:
+      summary: Start the next exercise
+      description: Increment current_exercise, check limit
+      operationId: next_exercise
+      responses:
+        '200':
+          description: Successful operation
+        '500':
+          description: A Processing Error occurred
+  /api/workshop/{id}/message:
+    post:
+      summary: Add a message the the messages of the current exercise. 
+      description: Add the message to the list, use LLM to generate reply, update messages doc, return reply.
+      operationId: add_message
+      responses:
+        '200':
+          description: Successful operation
+        '500':
+          description: A Processing Error occurred
+    patch:
+      summary: Update list of messages
+      description: Update the full list of messages
+      operationId: patch_messages
+      responses:
+        '200':
+          description: Successful operation
+        '500':
+          description: A Processing Error occurred
+  /api/workshop/{id}/observation:
+    post:
+      summary: Add an observation to the observations of the current exercise. 
+      description: Add the observation to the current exercise list of observations.
+      operationId: add_observation
+      responses:
+        '200':
+          description: Successful operation
+        '500':
+          description: A Processing Error occurred
+    patch:
+      summary: Update list of observations
+      description: Update the full list of observations
+      operationId: patch_observations
+      responses:
+        '200':
+          description: Successful operation
+        '500':
+          description: A Processing Error occurred
 
-GET exercises
-GET exercise/{name}
+  /api/health/:
+    get:
+      summary: Prometheus Healthcheck endpoint
+      operationId: getHealth
+      responses:
+        '200':
+          description: Successful operation
+  /api/config/:
+    get:
+      summary: Get API Configuration Information
+      operationId: getConfig
+      responses:
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Config'     
+components:
+  schemas:
+    Workshop:
+      description: A record of a specific design thinking workshop.
+      type: object
+      properties:
+        guild:
+          description: Discord Server where this workshop takes place
+          type: string
+        category:
+          description: Discord Channel Category where this workshop channel is
+          type: string
+        name:
+          description: Workshop Name (Channel Name)
+          type: string
+        purpose:
+          description: Workshop Purpose
+          type: string
+        when:
+          description: Date/Time From-To for the Workshop Event
+          type: object
+          properties:
+            from:
+              type: string
+              format: Date/Time
+            to:
+              type: string
+              format: Date/Time
+        status:
+          description: Status
+          type: string
+          enum: [Pending, Active, Complete]
+        current_exercise:
+          description: Index of the current exercise for Active workshops
+          type: integer
+        exercises: 
+          description: List of exercises
+          type: array
+          items:
+            $ref: '#/components/schemas/WorkshopExercise'
+        last_saved: 
+          description: description
+          type: object
+    WorkshopExercise:
+      description: A record of a specific design thinking workshop exercise.
+      type: object
+      properties:
+        name:
+          description: Exercise Name (in Exercises)
+          type: string
+        messages:
+          description: list of chat messages
+          type: array
+          items:
+            type: string
+        observations:
+          description: list of Observations made during this exercise
+          type: array
+          items:
+            type: object
+    Appointment:
+      description: A from/to Date/Time value
+      type: object
+      properties:
+        from:
+          type: string
+          format: Date/Time
+        to:
+          type: string
+          format: Date/Time
+    Workshops: 
+      description: A list of workshops
+      type: array
+      items:
+        type: object
+        properties:
+          "_id": 
+            description: The unique ID of the workshop
+            type: string
+          "guild":
+            description: Discord Server where this workshop takes place
+            type: string
+          "category":
+            description: Discord Channel Category where this workshop channel is
+            type: string
+          "name":
+            description: The unique short name of the workshop
+            type: string
+          "when":
+            description: Date/Time From-To for the Workshop Event
+            $ref: "#/components/schemas/Appointment"
+          "status":
+            description: Status
+            type: string
+            enum: [Pending, Active, Complete]
+    New_Workshop:
+      description: Info needed to create a new workshop
+      type: object
+      properties:
+        name:
+          description: Workshop Name
+          type: string
+        purpose:
+          description: Workshop Purpose
+          type: string
+        when:
+          description: Date/Time From-To for the Workshop Event
+          $ref: "#/components/schemas/Appointment"
+        chain:
+          description: Name of Chain to use as workshop template
+          type: string
+        users:
+          description: List of users to attend workshop event
+          type: array
+          items:
+            type: string
+    Chains:
+      description: A List of Exercise Chains (workshop templates)
+      type: array
+      items:
+        type: object
+        properties:
+          "_id": 
+            description: The unique ID of the chain
+            type: string
+          "name":
+            description: The unique short name of the chain
+            type: string
+    Chain:
+      description: A List of Exercises (workshop template)
+      type: object
+      properties:
+        "_id":
+          description: Unique Identifier of this Chain
+          type: string
+        "name": 
+          description: The name of the Chain
+          type: string
+        "exercises":
+          description: List of Exercise Names (in Exercises)
+          type: array
+          items:
+            type: string
+    Exercises:
+      description: A list of available design thinking exercises
+      type: array
+      items:
+        type: object
+        properties:
+          "_id": 
+            description: The unique ID of the exercise
+            type: string
+          "name":
+            description: The unique short name of the exercise
+            type: string
+    Exercise: 
+      description: A design thinking exercise that is conducted as a step in a design thinking workshop
+        Each exercise is conducted in a multi-person chat, and will consist of three activities, Observe, Reflect, Make
+      type: object
+      properties:
+        "name":
+          description: name
+          type: string
+        "description":
+          description: description 
+          type: string
+        "duration":
+          description: duration
+          type: string
+        "observe_instructions":
+          description: observation exercise instructions
+          type: string
+        "reflect_instructions":
+          description: reflect exercise instructions
+          type: string
+        "make_instructions":
+          description: make exercise instructions
+          type: string
+    Config:
+      type: object
+      properties:
+        configItems:
+          type: array
+          items:
+            type: object
+            properties:
+              name:
+                description: Conf Item Name (Env Var Name, File Name)
+                type: string
+              value:
+                description: The value for that config item
+                type: string
+              from:
+                description: Where the value was found
+                type: string
+                enum:
+                  - default
+                  - environment
+                  - file
+        token:
+          description: Access token used in /config api call
+          type: object
+          properties:
+            user_id:
+              description: Logged in user_id value
+              type: string
+            from_ip:
+              description: User's current IP address
+              type: string
+            roles:
+              description: User's RBAC roles
+              type: array
+              items:
+                type: string
+        versions:
+          description: Not Used
+          type: array
+        enumerators:
+          description: Not Used
+          type: object
